library management system

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 PORT=8080
-MONGO_URI="mongodb+srv://kaveesha:kaveesha123@cluster0.hkneily.mongodb.net/LibraryManagement?retryWrites=true&w=majority"
+MONGO_URI="mongodb://localhost:27017/project"
 SESSION_SECRET="secret"
+
+
+
+
+
